# SC2BS

./: LICENSE  README.md  images.sh  requirements.txt  run.sh  setup.cfg
src/sc2bs/CrankNicolson/: Main.f90  cloud_potential.f90  instants.f90  math_methods.f90  modulation.f90  predictor.f90  variables.f90  wave_function.f90  writers.f90
src/sc2bs/CrankNicolson/Input/: inp.txt
src/sc2bs/CrankNicolson/Input/TimeIndependentSolutions/1/: WF.txt
src/sc2bs/CrankNicolson/Input/TimeIndependentSolutions/2/: WF.txt  xpoints.txt
src/sc2bs/CrankNicolson/Input/TimeIndependentSolutions/5/: WF.txt  xpoints.txt
src/sc2bs/CrankNicolson/Input/TimeIndependentSolutions/BSCloud/: WF.txt  xpoints.txt
src/sc2bs/CrankNicolson/Output/: ini.f90
src/sc2bs/InitialWF/: RK4.py  SelfConsistency_Method.py  helpfull_functions.py
src/sc2bs/Read/: AnimFunctions.py  BasicPlots.py  JoinGifs.py  Main_Reader.py  SideSide.py  read_interpolate.py  readers.py  simplifyplots.py
