[metadata]
name = sc2bs
description = BosonStar
author =  Daniel Neves, João G. Rosa
license = MIT
license_files = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
url = https://github.com/danielneves1/SC2BS
classifiers =
    Programming Language :: Fortran :: 3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific

[options]
packages =
    sc2bs
install_requires =
    numpy>=2.2
    matplotlib>=3.10
    scipy>=1.16
    pillow>=11.1.0
    tqdm>=4.67
python_requires =
    >=3.12
package_dir =
    =src
zip_safe =
    no

